--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -6,6 +6,9 @@ spring:
     url: ${SERVER_URL:jdbc:postgresql://localhost:5432/spring_todo_db}
     username: ${SERVER_USERNAME:postgres}
     password: ${SERVER_PASS:1322}
+  jpa:
+    show-sql: true
+    open-in-view: true
   data:
     redis:
       port: ${REDIS_PORT:6379}
